// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureService #addSignture 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "817d9408604ec47f432c24fa7002c4c86d5db5fa244faba971afe7e6f6e01eca",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "",
      "95f01c372671cae2e7f418bab7ea7bdc940e1bfe885f2482e709fdd039c2506e53d7c00a4ce16f5193d92b57b841dd04df1593f3f030749ee30231d3d7b45202",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "817d9408604ec47f432c24fa7002c4c86d5db5fa244faba971afe7e6f6e01eca",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "817d9408604ec47f432c24fa7002c4c86d5db5fa244faba971afe7e6f6e01eca",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "",
      "95f01c372671cae2e7f418bab7ea7bdc940e1bfe885f2482e709fdd039c2506e53d7c00a4ce16f5193d92b57b841dd04df1593f3f030749ee30231d3d7b45202",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`MultiSignatureService #addSignture 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "49aab858eed43883455f6206d2dec74a1bcd971657677695ddeaf3eeab736333",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "ab05e0f5614d64c2f2ad9278567cc19211f5f8ebc34878cb93d30d8ae72f137785e0a955a7003c87f0993b1102a6cb356f085e00da26f85dfd15b7c7a4c53501",
      "95f01c372671cae2e7f418bab7ea7bdc940e1bfe885f2482e709fdd039c2506e53d7c00a4ce16f5193d92b57b841dd04df1593f3f030749ee30231d3d7b45202",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "49aab858eed43883455f6206d2dec74a1bcd971657677695ddeaf3eeab736333",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "49aab858eed43883455f6206d2dec74a1bcd971657677695ddeaf3eeab736333",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "0",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "ab05e0f5614d64c2f2ad9278567cc19211f5f8ebc34878cb93d30d8ae72f137785e0a955a7003c87f0993b1102a6cb356f085e00da26f85dfd15b7c7a4c53501",
      "95f01c372671cae2e7f418bab7ea7bdc940e1bfe885f2482e709fdd039c2506e53d7c00a4ce16f5193d92b57b841dd04df1593f3f030749ee30231d3d7b45202",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;
